# vusbipd-ccid

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: build.yml
docs/: architecture.md
examples/: pn532_list_passive_target.rs
src/: app.rs  config.rs  lib.rs  main.rs  stack.rs
src/ccid/: bridge.rs  mod.rs  protocol.rs  transport.rs
src/nfc/: dummy.rs  mod.rs  pn532.rs
src/usbip/: device.rs  mod.rs  server.rs
